# pywebclient

./: LICENSE  pyproject.toml
pywebclient/: client.py
tests/: test_clientconfig.py
