[project]
name = "pywebclient"
version = "0.1.0"
description = "Python Async Client for APIs"
authors = [{ name = "Asaph Souza Diniz", email = "contato@asaph.dev.br" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx (>=0.28.1,<0.29.0)"]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
